# tidas-sdk

./: .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CLAUDE.md.backup  README-zh.md  README.md  RELEASE.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  test-zod-schemas.ts  ts-to-zod.config.js  tsconfig.json
.docpact/: config.yaml
.githooks/: pre-push
ai/: architecture.md  doc-impact.yaml  repo.yaml  task-router.md  validation.md
docs/: release-setup.md  upstream-automation.md
examples/: 00-basic-object.ts  01-basic-object-creation.ts  01-simplified-objects.ts  01-zod-proxy-demo.ts  02-mock-data-generation.ts  02-typed-accessors.ts  03-direct-property-access.ts  README.md  comparison-demo.ts  package-lock.json  (+9 more)
sdks/python/: .gitignore  CATEGORY_ENUM_EXAMPLE.md  FIX_COMPLETED.md  FIX_POST_PROCESS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  POST_PROCESS_ISSUES.md  README-zh.md  README.md  README_zh.md  RELEASE.md  SCHEMA_REFERENCE_ANALYSIS.md  SOLUTION_DESIGN.md  TODO.md  TYPE_GENERATION_REVIEW.md  pyproject.toml  test_code_generator.py  test_contacts.py  test_data_types.py  test_type_mapper.py
sdks/python/.github/workflows/: release.yml
sdks/python/examples/: 01_basic_usage.py  02_batch_operations.py  03_validation_modes.py  04_relationships.py  05_typed_access.py  06_pydantic_models.py  README.md  builder_contact_example.py  builder_process_example.py  examples-index.md  run_example.sh  test_builder_fixes.py  test_new_builder_features.py  usage.py
sdks/python/scripts/: code_generator.py  generate_builders.py  generate_category_types.py  generate_entity_models.py  generate_sdk.py  generate_types.py  generate_types_v2.md  generate_types_v2.py  generate_wrappers.py  post_process_types.py  postprocess_types.py  release.sh  schema_parser.py  type_mapper.py  validate_generated.py
sdks/python/src/tidas_sdk/: __init__.py  config.py  factories.py
sdks/python/src/tidas_sdk/builders/: __init__.py  tidas_contacts_builders.py  tidas_flowproperties_builders.py  tidas_flows_builders.py  tidas_lciamethods_builders.py  tidas_lifecyclemodels_builders.py  tidas_processes_builders.py  tidas_sources_builders.py  tidas_unitgroups_builders.py
sdks/python/src/tidas_sdk/core/: __init__.py  base.py  cas_number.py  exceptions.py  factory.py  logging_config.py  markdown.py  multilang.py  typed_access.py  validation.py
sdks/python/src/tidas_sdk/core/wrappers/: __init__.py  contacts_wrappers.py  flowproperties_wrappers.py  flows_wrappers.py  lciamethods_wrappers.py  lifecyclemodels_wrappers.py  processes_wrappers.py  sources_wrappers.py  unitgroups_wrappers.py
sdks/python/src/tidas_sdk/entities/: __init__.py  contact.py  flow.py  flow_property.py  lcia_method.py  life_cycle_model.py  process.py  source.py  unit_group.py  utils.py
sdks/python/src/tidas_sdk/models/: __init__.py  contact.py  contacts.py  flow.py  flow_property.py  flowproperties.py  flows.py  lcia_method.py  lciamethods.py  life_cycle_model.py  lifecyclemodels.py  process.py  processes.py  source.py  sources.py  unit_group.py  unitgroups.py
sdks/python/src/tidas_sdk/schemas/: __init__.py  tidas_data_types.json
sdks/python/src/tidas_sdk/types/: __init__.py  tidas_contacts.py  tidas_contacts_category.py  tidas_data_types.py  tidas_flowproperties.py  tidas_flowproperties_category.py  tidas_flows.py  tidas_flows_elementary_category.py  tidas_flows_product_category.py  tidas_lciamethods.py  tidas_lciamethods_category.py  tidas_lifecyclemodels.py  tidas_locations_category.py  tidas_processes.py  tidas_processes_category.py  tidas_sources.py  tidas_sources_category.py  tidas_unitgroups.py  tidas_unitgroups_category.py
sdks/python/src/tidas_sdk/xml/: parser.py  serializer.py
sdks/python/tests/: __init__.py  test_contact_multilang_parity.py  test_flow_validation_parity.py  test_generated_cas_number.py  test_generated_common_other.py  test_generated_localized_text.py  test_generated_process_exchange_location.py  test_generated_tidas_enums.py  test_markdown.py  test_process_from_xml.py
sdks/python/tests/fixtures/: flow-validation-parity.json
sdks/python/tests/unit/: test_builders.py
(+297 files in other folders)
