[project]
name = "tidas-sdk"
version = "0.1.0"
description = "Python SDK for TIDAS/ILCD Life Cycle Assessment data"
authors = [{ name = "TIDAS Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "loguru>=0.7.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]
keywords = ["tidas", "ilcd", "lca", "life-cycle-assessment"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6.0",
    "black>=24.0",
    "pydocstyle>=6.3",
    "datamodel-code-generator>=0.27.0", # For generating Pydantic models from JSON schemas
]

[project.urls]
Homepage = "https://github.com/tiangong-lca/tidas-sdk"
Repository = "https://github.com/tiangong-lca/tidas-sdk"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tidas_sdk = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N815","N816", "E501","F811","F401","I001","F822","F841","F541","N818","W293"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/tidas_sdk --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/tidas_sdk"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "datamodel-code-generator>=0.27.3",
    "mypy>=1.14.1",
    "ruff>=0.14.3",
    "twine>=6.1.0",
]
